# convert-fileformat-with-pandas

./: .flake8  .gitignore  .travis.yml  LICENSE  Makefile  README.md  README_for_developer.md  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml  lint-test.yaml  publish-to-pypi.yml
convpandas/: __main__.py  __version__.py
convpandas/command/: csv2xlsx.py  xlsx2csv.py
convpandas/common/: __init__.py  cli.py
tests/: test_main.py
tests/data/: test.csv  test.xlsx  test2.csv  test2.xlsx
