[tool.poetry]
name = "convpandas"
version = "0.0.0"  # `poetry-dynamic-versioning`を使ってGitHubのバージョンタグを取得している。変更不要
description = "Convert file format with pandas"
authors = ["Kurusugawa Computer Inc."]
license = "MIT"
keywords=["pandas", "csv","xlsx", "excel"]
readme="README.md"
repository="https://github.com/kurusugawa-computer/convert-fileformat-with-pandas.git"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.8.1"
pandas = ">=1"
openpyxl = "*"

[tool.poetry.dev-dependencies]
flake8 = "^6"
autoflake = "*"
isort = "^5"
black = "^23"
mypy = "^1"

pytest = "^7"

[tool.poetry.scripts]
convpandas = "convpandas.__main__:cli"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true


[tool.black]
line-length = 120


[tool.isort]
profile = "black"
line_length = 120



[tool.poetry-dynamic-versioning]
enable = true
format = "{base}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
