[project]
name = "convpandas"
dynamic = ["version"]
description = "Convert file format with pandas"
authors = [{ name = "Kurusugawa Computer Inc." }]
license = { text = "MIT" }
keywords = ["pandas", "csv", "xlsx", "excel"]
readme = "README.md"
requires-python = ">=3.11,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2,<4",
    "openpyxl",
]

[dependency-groups]
test = [
    "pytest>=9",
]
linter = [
    "ruff>=0.15",
    "mypy>=2.1",
]

[tool.uv]
default-groups = ["test", "linter"]
package = true

[project.urls]
Homepage = "https://github.com/kurusugawa-computer/convert-fileformat-with-pandas"
Repository = "https://github.com/kurusugawa-computer/convert-fileformat-with-pandas"

[project.scripts]
convpandas = "convpandas.__main__:cli"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "G004", # `logging-f-string` : loggingでf-stringを使いたいので無視する
    "PD002", #すでにpandasで`inplace=True`はいろんなところで使っているため
    "RUF001", # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF002",# 全角記号など`ambiguous unicode character`も使いたいため
    "RUF003",# 全角記号など`ambiguous unicode character`も使いたいため
    "PLR2004", # magic-value-comparison: listのサイズで判定するときがよくあるため
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ERA", # : 役立つこともあるが、コメントアウトしていないコードも警告されるので無視する


    # 以下のルールはコードに合っていないので無効化した
    "RSE", # flake8-raise
    "D", # pydocstyle, Docstringを中途半端にしか書いていないので、除外する
    "C90", # mccabe
    "T20", # flake8-print
    "SLF", #  flake8-self
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "TRY", # tryceratops
    "COM", # flake8-commas
    "S", # flake8-bandit
    "EM",#flake8-errmsg
    "EXE", # flake8-executable
    "ICN", # flake8-import-conventions
    "RET",#flake8-return
    "SIM",#flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", #pathlibを使わないコードが多いので、除外する
    "ISC", #flake8-implicit-str-concat
    "N", # pep8-naming
    "PT", # flake8-pytest-style
]

select = [
    "ALL"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["convpandas"]
